--- a/requirements.txt
+++ b/requirements.txt
@@ -9,14 +9,13 @@ flask-sqlalchemy==3.0.5
 sqlalchemy==2.0.21
 email_validator==2.0.0
 flask-restx==1.1.0
-gunicorn==20.0.4
+gunicorn==20.1.0
 python-dotenv==0.19.2
 
-gunicorn==20.1.0
+
 Flask-Minify==0.37
 
 flask-dance==7.0.0
 blinker==1.6.2
-mariadb
-# flask_mysqldb
+flask_mysqldb
 # psycopg2-binary
