--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,9 @@ python-dotenv==0.19.2
 
 
 Flask-Minify==0.37
-
+flask_migrate
 flask-dance==7.0.0
 blinker==1.6.2
-flask_mysqldb
+msal
+mysqlclient
 # psycopg2-binary
