--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # flask==2.2.5
 flask==3.0.3
-Werkzeug==2.3.7
+# Werkzeug==2.3.7
+Werkzeug==3.0.0
 jinja2==3.1.2
 flask-login==0.6.3
 flask_migrate==4.0.7
